# previsao-churn-explicavel

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  reproducibility.yml  tests.yml  tmp-autofix.yml
app/: dashboard.py
configs/: config.yaml  deploy.yaml  logging.yaml  model_params.yaml  paths.yaml
docs/: arquitetura.md  guia-uso.md  index.md  referencia.md
notebooks/: 01_eda.ipynb  02_modeling_evaluation.ipynb
reports/datasheets/: olist.md
reports/model_cards/: churn_lightgbm.md
src/: __init__.py  main.py
src/config/: __init__.py  environment.py  logging.py  paths.py  settings.py
src/constants/: __init__.py  columns.py  defaults.py
src/data/: __init__.py  loader.py  splitter.py
src/evaluation/: __init__.py  calibration.py  fairness.py  metrics.py
src/exceptions/: __init__.py
src/experiment/: __init__.py  tracker.py
src/explainability/: __init__.py  shap_explainer.py
src/features/: __init__.py  engineering.py  rfm.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  persistence.py  pipeline.py
src/pipelines/: __init__.py  build_features.py  common.py  evaluate.py  explain.py  train.py
src/schemas/: __init__.py  features.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  io.py  progress.py
src/visualization/: __init__.py  plots.py  theme.py
tests/: __init__.py  conftest.py  test_config.py  test_config_extra.py  test_features.py  test_loader.py  test_metrics.py  test_model_and_explainer.py  test_persistence.py  test_pipelines.py  test_properties.py  test_schemas.py  test_splitter.py  test_trainer.py  test_visualization.py
